# hal

./: .env.example  .envrc  .gitignore  CLAUDE.md  README.md  TODO_MIGRATION.md  TODO_PRODUCTIONIZATION.md  pyproject.toml  requirements.in  requirements.txt  requirements_macos.txt
.cursor/rules/: hal-project-structure.mdc
docker/: Dockerfile  on-start.sh
experiments/: 001_flow_matching_baseline.py  001_flow_matching_rtc_baseline.py  002_flow_matching_rtc.py  003_multi_position.py  004_flow_matching_beta_t.py  005_classification.py  006_chord_ar.py  007_factorized_ar.py  008_rle_events.py  009_simplify_arch.py  010_ar_groups.py  011_muon.py
hal/: __init__.py  config.py  constants.py  distributed.py  emulator_helper.py  emulator_paths.py  eval.py  fixtures.py  gamestate_utils.py  headless_eval.py  io.py  local_paths.py  paths.py  policy.py  replay.py  slp_to_pyarrow.py  streams.py  train.py  types.py  utils.py  wire.py
hal/data/: archive.py  archive_iter.py  build_index.py  calculate_stats.py  constants.py  dataset.py  extract.py  filter_replays.py  index.py  manifest.py  normalize.py  preprocess_dataset.py  preprocess_replay_mds.py  preprocess_replays.py  preprocess_replays_parquet.py  preprocessing.py  primitives.py  process_replays.py  replay_stats.py  schema.py  slp_finalize.py  slp_to_pyarrow.py  stats.json  stats.py  streams.py  test_preprocessing.py
hal/emulator/: controller_io.py  controller_sources.py  diff.py  roundtrip.py  session.py
hal/eval/: cross_stage.py  emulator_helper.py  emulator_paths.py  eval.py  eval_closed_loop.py  eval_helper.py  harness.py  play.py  scoring.py  self_play.py  slippilab.py
hal/later_use/: config.py  dataloader.py  embed.py  registry.py
hal/preprocess/: __init__.py  input_config.py  input_configs.py  postprocess_config.py  postprocess_configs.py  preprocess_targets.py  preprocessor.py  registry.py  target_config.py  target_configs.py  target_configs_multi_token.py  test_encoding.py  transformations.py
hal/schedule/: schedule.py  stage.py
hal/scripts/: build_index.py  fetch.py  filter.py  index.py  matchups.py  materialize.py  slp_link.py  stage3_process_replays.py
hal/sim/: __init__.py  session.py  trajectory.py  vec.py
hal/training/: canonical.py  checkpoints.py  closed_loop.py  config.py  dataloader.py  dataset.py  distributed.py  features.py  gaussian_loss_trainer.py  io.py  mem_utils.py  multi_token_trainer.py  optim.py  recurrent_trainer.py  simple_trainer.py  sliding_window_trainer.py  stacked_trainer.py  stats.py  streaming_dataloader.py  streaming_dataset.py  train.py  trainer.py  types.py  utils.py  value_trainer.py
hal/training/archive/: gaussian_loss_trainer.py  independent_button_trainer.py
hal/training/deprecated/: dataset.py  recurrent_trainer.py  sliding_window_trainer.py  tensordict_dataloader.py
hal/training/models/: __init__.py  archive.py  gpt.py  gpt_multi_token.py  lstm.py  mlp.py
hal/training/preprocess/: README.md  __init__.py  config.py  encoding.py  postprocess_preds.py  preprocess_inputs.py  preprocess_targets.py  preprocessor.py  registry.py  target_embedding_sizes.py  test_encoding.py  test_postprocess_preds.py  test_preprocess_targets.py  transform.py
hal/training/zoo/embed/: preprocess_inputs.py  preprocess_inputs_v0.py  preprocess_targets.py  registry.py
hal/training/zoo/models/: __init__.py  archive.py  gpt.py  lstm.py  mlp.py  transformer.py
hal/training/zoo/preprocess/: encoding.py  preprocess_inputs.py  preprocess_targets.py  registry.py  test_preprocess_targets.py  test_preprocessing.py
hal/zoo/embed/: registry.py
hal/zoo/models/: registry.py
notebooks/: analyze_stages.py  bench_precision.py  benchmark_gpt.py  benchmark_pyarrow.py  build_index_exploration.py  debug_ce.py  debug_emulator.py  debug_loss.py  debug_one_hot.py  eval_stress.py  eval_vs_cpu.py  filter_explore.py  find_analog_clusters.py  find_regression.py  hyperparam_sweep.py  inspect_data.py  load.py  manifest_exploration.py  multishine.py  overfit_gpt.py  overfit_mlp.py  prepare.py  read_parquet.py  replay_multishine.py  replay_reproduction_sanity.HANDOFF.md  replay_reproduction_sanity.README.md  replay_reproduction_sanity.py  replay_reproduction_sanity.repro_log.md  scratch.py  shared_dataset_ddp.py  shared_memory_ddp.py  test_button_encoding.py  test_dataloader.py  test_emulator.py  test_flexattention.py  test_gaussian_loss.py  test_inmemorydataloader.py  test_kv_cache.py  test_mds.py  test_multishine.py  (+6 more)
scripts/: launch_vast.py  setup.sh  setup_linux.sh  setup_remote_machine.sh
tests/: test_archive_streaming.py  test_archive_zip.py  test_controller_io.py  test_dataloader.py  test_emulator_roundtrip.py  test_extract.py  test_latency_chunk.py  test_matchups.py  test_postprocess_preds.py  test_preprocess_encoding.py  test_replay_stats.py  test_roundtrip.py  test_rtc_policy.py  test_session_cleanup.py  test_slp_finalize.py  test_stats.py  test_trajectory.py  test_vec.py  test_wire_bridges.py
